--- a/DevTrack/src/css/CreateProjectForm.css
+++ b/DevTrack/src/css/CreateProjectForm.css
@@ -1,4 +1,4 @@
-/* CreateProject.css */
+/* This is the CSS for the CreateProjectForm component. */
 .create-project-container {
     display: flex;
     flex-direction: column;
